# TanAI-LLM-Lite

./: .gitignore  README-TR.md  README-TR.txt  README.md  pyproject.toml  requirements.txt
data/reports/: base_report.json  encoder_report.json  tanai-tokenizer.metadata.json  tanai-tokenizer.report.json
data/tokenizer/: tanai-tokenizer.model  tanai-tokenizer.vocab
docs/: 00_scope.md  01_architecture.md  02_training_flow.md  03_inference_flow.md  04_run.md  05_tanai_lite_info.md  06_corpus_selection.md
tanailite/: config.py  version.py
tanailite/encoder/: encoder.py
tanailite/infer/: generate.py  run_infer.py
tanailite/model/: tanai_gpt.py
tanailite/tokenizer/: tokenizer.py
tanailite/tools/: repro_mini_run.py  run_smoke.py
tanailite/train/: data_utils.py  train_base.py  train_encoder.py  train_sft.py  train_tokenizer.py
tanailite/utils/: checkpoint_io.py  corpus_slicer.py  runtime.py
tests/: test_smoke_imports.py
